// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MongoConnection should connect and persist 1`] = `
MongoInMemoryDatabase {
  "collections": Object {},
  "databaseName": "dbName",
}
`;

exports[`MongoConnection should connect and persist 2`] = `
MongoInMemoryCollection {
  "collectionName": "coName",
  "data": Array [],
  "indices": Array [],
}
`;

exports[`MongoConnection should connect and persist 3`] = `
MongoInMemoryCollection {
  "collectionName": "coName",
  "data": Array [],
  "indices": Array [
    Object {
      "index": Object {
        "index": true,
      },
      "options": Object {
        "options": true,
      },
    },
  ],
}
`;

exports[`MongoConnection should connect and persist 4`] = `
MongoInMemoryCollection {
  "collectionName": "coName",
  "data": Array [
    Object {
      "data": Object {
        "number": 12345,
        "string": "string",
      },
      "group": "1",
      "id": "1",
      "version": 0,
    },
  ],
  "indices": Array [
    Object {
      "index": Object {
        "index": true,
      },
      "options": Object {
        "options": true,
      },
    },
  ],
}
`;

exports[`MongoConnection should connect and persist 5`] = `
MongoInMemoryCollection {
  "collectionName": "coName",
  "data": Array [
    Object {
      "data": Object {
        "number": 12345,
        "string": "string",
      },
      "group": "1",
      "id": "1",
      "version": 0,
    },
    Object {
      "data": Object {
        "arr": Array [],
        "bool": true,
      },
      "group": "1",
      "id": "2",
      "version": 0,
    },
  ],
  "indices": Array [
    Object {
      "index": Object {
        "index": true,
      },
      "options": Object {
        "options": true,
      },
    },
  ],
}
`;

exports[`MongoConnection should connect and persist 6`] = `
MongoInMemoryCollection {
  "collectionName": "coName",
  "data": Array [
    Object {
      "data": Object {
        "number": 12345,
        "string": "string",
      },
      "group": "1",
      "id": "1",
      "version": 0,
    },
    Object {
      "data": Object {
        "arr": Array [],
        "bool": true,
      },
      "group": "1",
      "id": "2",
      "version": 1,
    },
  ],
  "indices": Array [
    Object {
      "index": Object {
        "index": true,
      },
      "options": Object {
        "options": true,
      },
    },
  ],
}
`;

exports[`MongoConnection should connect and persist 7`] = `
Object {
  "data": Object {
    "number": 12345,
    "string": "string",
  },
  "group": "1",
  "id": "1",
  "version": 0,
}
`;

exports[`MongoConnection should connect and persist 8`] = `
MongoInMemoryCursor {
  "data": Array [
    Object {
      "data": Object {
        "number": 12345,
        "string": "string",
      },
      "group": "1",
      "id": "1",
      "version": 0,
    },
    Object {
      "data": Object {
        "arr": Array [],
        "bool": true,
      },
      "group": "1",
      "id": "2",
      "version": 1,
    },
  ],
}
`;

exports[`MongoConnection should connect and persist 9`] = `
Object {
  "dbName": MongoInMemoryDatabase {
    "collections": Object {
      "coName": MongoInMemoryCollection {
        "collectionName": "coName",
        "data": Array [],
        "indices": Array [
          Object {
            "index": Object {
              "index": true,
            },
            "options": Object {
              "options": true,
            },
          },
        ],
      },
    },
    "databaseName": "dbName",
  },
  "primaryDb": Object {},
}
`;
